# apps/api/src/box/controllers/box.controller.ts
@@ -280,7 +280,7 @@ export class BoxController {
   ): Promise<BoxDto> {
     const box = await this.boxService.findOneByIdOrName(boxIdOrName, authContext.organizationId)
 
-    return this.boxService.toBoxDto(box)
+    return this.boxService.toBoxDtoWithExitCode(box)
   }
 
   @Post(':boxIdOrName/recover')
@@ -384,7 +384,6 @@ export class BoxController {
       updateStateDto.state,
       updateStateDto.recoverable,
       updateStateDto.errorReason,
-      updateStateDto.exitCode,
     )
   }
 
